[Java] Allow build with Java greater than 8.