@@ -21,6 +21,7 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'idea'
     id 'io.freefair.javadoc-links' version '4.1.3' apply false
     id 'com.github.johnrengelman.shadow' version '5.1.0' apply false
 }
@@ -29,7 +30,6 @@ defaultTasks 'clean', 'build', 'shadowJar', 'install'
 
 def sbeGroup = 'uk.co.real-logic'
 def sbeVersion = file('version.txt').text.trim()
-def sbeJavaVersion = JavaVersion.VERSION_1_8
 
 group = sbeGroup
 version = sbeVersion
@@ -138,15 +138,19 @@ subprojects {
     checkstyle.toolVersion = '8.25'
 
     compileJava {
-        sourceCompatibility = sbeJavaVersion
-        targetCompatibility = sbeJavaVersion
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        }
         options.encoding = 'UTF-8'
         options.deprecation = true
     }
 
     compileTestJava {
-        sourceCompatibility = sbeJavaVersion
-        targetCompatibility = sbeJavaVersion
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        }
         options.encoding = 'UTF-8'
         options.deprecation = true
     }
@@ -206,8 +210,10 @@ project(':sbe-tool') {
 
     compileGeneratedJava {
         dependsOn 'generateCodecs'
-        sourceCompatibility = sbeJavaVersion
-        targetCompatibility = sbeJavaVersion
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        }
         options.encoding = 'UTF-8'
         options.deprecation = true
         classpath += sourceSets.main.runtimeClasspath
@@ -365,8 +371,10 @@ project(':sbe-samples') {
 
     compileGeneratedJava {
         dependsOn 'generateCodecs'
-        sourceCompatibility = sbeJavaVersion
-        targetCompatibility = sbeJavaVersion
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        }
         options.encoding = 'UTF-8'
         options.deprecation = true
         classpath += project(':sbe-all').sourceSets.main.runtimeClasspath
@@ -461,8 +469,10 @@ project(':sbe-benchmarks') {
 
     compileGeneratedJava {
         dependsOn 'generateCodecs'
-        sourceCompatibility = sbeJavaVersion
-        targetCompatibility = sbeJavaVersion
+        if (JavaVersion.current().ordinal() >= JavaVersion.VERSION_1_9.ordinal()) {
+            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        }
         options.encoding = 'UTF-8'
         options.deprecation = true
         classpath += project(':sbe-all').sourceSets.main.runtimeClasspath
